# pygame-core

./: .gitattributes  .gitignore  README.md  __init__.py  database.py  image.py  path.py  pyproject.toml  setup.py  tilemap.py
.github/workflows/: tests.yml
game_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pygame_core/: __init__.py  application.py  asset_manager.py  asset_path.py  camera.py  color.py  database.py  debug.py  font.py  image.py  input_box.py  math_utils.py  mouse.py  panel_factory.py  panel_loader.py  panel_loader_ext.py  panel_manager.py  path.py  save_store.py  spatial_grid.py  splash_screen.py  sprite_sheet.py  tilemap.py  utils.py
pygame_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pygame_core/ecs/: animated_sprite.py  game_audio.py  game_object.py  game_object_dict.py  game_object_list.py  sound_manager.py  state_object.py
pygame_core/net/: protocol.py  transport.py
pygame_core/ui_widgets/: menu_controller.py  (+2 more)
tests/: _util.py  conftest.py  test_animated_sprite.py  test_animator.py  test_application.py  test_asset_manager.py  test_asset_path.py  test_camera.py  test_component.py  test_database.py  test_debug.py  test_font.py  test_game_audio.py  test_game_object.py  test_game_object_containers.py  test_image.py  test_input_box.py  test_math_utils.py  test_menu_controller.py  test_mouse.py  test_panel_factory.py  test_panel_loader.py  test_panel_loader_ext.py  test_panel_manager.py  test_protocol.py  test_rigidbody2d.py  test_save_store.py  test_slider.py  test_spatial_grid.py  test_splash_screen.py  test_sprite_renderer2d.py  test_sprite_sheet.py  test_state_object.py  test_text_object.py  test_tilemap.py  test_transform.py  test_transport.py  test_utils.py
(+21 files in other folders)
