[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-core"
version = "0.1.1"
description = "Shared pygame utilities for personal game projects"
requires-python = ">=3.10"
dependencies = ["pygame-ce"]

[tool.setuptools]
packages = ["pygame_core"]
